Fixed the alignment and; all links are working; created correspoding pages for each link

--- a/Styles.css
+++ b/Styles.css
@@ -196,3 +196,7 @@ align-self: center;
 .bluebackground{
     background-color: #74BEC1;
 }
+
+.homebutton{
+    border: none; 
+}
